--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ doc/report/project-report.pdf
 Thumbs.db
 tomcat/StreamAlert/build/
 .metadata/
+tomcat/StreamAlert/.settings/org.eclipse.wst.common.project.facet.core.prefs.xml/
