--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ Thumbs.db
 tomcat/StreamAlert/build/
 .metadata/
 tomcat/StreamAlert/.settings/org.eclipse.wst.common.project.facet.core.prefs.xml/
+.recommenders/
+
+# Compiled class file
+*.class
+.classpath
