--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ Thumbs.db
 tomcat/StreamAlert/build/
 .metadata/
 tomcat/StreamAlert/.settings/org.eclipse.wst.common.project.facet.core.prefs.xml/
+tomcat/war/StreamAlert/WEB-INF/classes/
 .recommenders/
 
 # Compiled class file
